--- a/examples/ui/complex_dialog.yaml
+++ b/examples/ui/complex_dialog.yaml
@@ -5,21 +5,22 @@
 
 version: "1.0"
 
-action: 
+action:
   #Must Have Properties
-  name: "UI / QML / Greetings Dialog"
+  name: "UI / Complex Dialog"
 
   #Optional Properties
   version: 1
-  id: "ap::examples::qml::greetings"
-  category: "examples/ui"
+  id: "ap::examples::complexdialog"
+  category: "examples/dialog"
   type: python
   author: "Anchorpoint Software GmbH"
-  description: "This is an advanced example action that uses PySide2 QML to create native QML dialogs"
+  description: "This is an advanced example action that demonstrates how to create and control a more complex dialog in anchorpoint"
   icon:
     path: ":icons/aplogo.svg"
-    
-  script: "greetings.py"
+    color: "white"
+
+  script: "complex_dialog.py"
 
   #Where to register this action: in all folders
   register:
