fix ffmpeg action naming

--- a/ffmpeg/ffmpeg_img_to_video.yaml
+++ b/ffmpeg/ffmpeg_img_to_video.yaml
@@ -7,7 +7,7 @@ version: "1.0"
 
 action:
   #Must Have Properties
-  name: "FFMPEG / Sequence to Video"
+  name: "FFmpeg / Sequence to Video"
 
   #Optional Properties
   version: 1
