--- a/tutorials/ui/qml/greetings.yaml
+++ b/tutorials/ui/qml/greetings.yaml
@@ -12,7 +12,7 @@ action:
   #Optional Properties
   version: 1
   id: "ap::examples::qml::greetings"
-  category: "examples/ui"
+  category: "examples/dialog"
   type: python
   author: "Anchorpoint Software GmbH"
   description: "This is an advanced example action that uses PySide2 QML to create native QML dialogs"
