--- a/cinema4d/c4d_export_fbx.yaml
+++ b/cinema4d/c4d_export_fbx.yaml
@@ -21,8 +21,11 @@ action:
   inputs:
     setAttributes: true
     targetFolder: "${folder}"
-    c4dPathWindows: "C:/Program Files/Maxon Cinema 4D R25/Commandline.exe"
-    c4dPathMac: "/Applications/Maxon Cinema 4D R25/Commandline.app/Contents/MacOS/Commandline"
+    c4d: 
+      message: Path to Cinema 4D Commandline
+      browse: file
+      store: user 
+
     c4dUsername: ""  #Optional
     c4dPassword: ""  #Optional
 
