converting the anchorpoint actions to packages
remove binary


disable all actions by default


added packages for all actions


disable tutorial actions


fix typo


add dependencies


add description to ffmpeg video action


add more description to FFmpeg


fix typo


fix wrong dependency

--- a/cinema4d/c4d_export_fbx.yaml
+++ b/cinema4d/c4d_export_fbx.yaml
@@ -13,6 +13,7 @@ action:
   version: 1
   id: "ap::c4d::export::fbx"
   category: "c4d/export"
+  enable: false
   type: python
   author: "Anchorpoint Software GmbH"
   description: "Exports the scene file as FBX and sets attributes"
