--- a/coding/open_vscode_here.yaml
+++ b/coding/open_vscode_here.yaml
@@ -10,6 +10,7 @@ action:
   version: 1
   id: ap::openvscode
   category: code
+  enable: false
   type: command
   author: Anchorpoint Software GmbH
   description: Opens Visual Studio Code in the current Folder. Make sure that the VSCode shell command 'code' is installed
