--- a/template/project.yaml
+++ b/template/project.yaml
@@ -11,6 +11,7 @@ action:
   id: ap::template::newproject
   category: template
   type: python
+  enable: false
   author: Anchorpoint Software GmbH
   description: Creates a new project folder based on a set of templates
   icon:
@@ -21,6 +22,9 @@ action:
     create_project: true
 
   script: templates.py
+
+  dependencies:
+    - project_templates
 
   register:
     folder:
