--- a/tutorials/ui/complex_dialog.yaml
+++ b/tutorials/ui/complex_dialog.yaml
@@ -14,6 +14,7 @@ action:
   id: "ap::examples::complexdialog"
   category: "examples/dialog"
   type: python
+  enable: false
   author: "Anchorpoint Software GmbH"
   description: "This is an advanced example action that demonstrates how to create and control a more complex dialog in anchorpoint"
   icon:
