--- a/tutorials/ui/greetings.yaml
+++ b/tutorials/ui/greetings.yaml
@@ -14,6 +14,7 @@ action:
   id: "ap::examples::greetings"
   category: "examples/dialog"
   type: python
+  enable: false
   author: "Anchorpoint Software GmbH"
   description: "This is a basic example that shows how to create simple dialogs"
   icon:
