--- a/tutorials/ui/qml/greetings.yaml
+++ b/tutorials/ui/qml/greetings.yaml
@@ -14,12 +14,16 @@ action:
   id: "ap::examples::qml::greetings"
   category: "examples/dialog"
   type: python
+  enable: false
   author: "Anchorpoint Software GmbH"
   description: "This is an advanced example action that uses PySide2 QML to create native QML dialogs"
   icon:
     path: ":icons/aplogo.svg"
     
   script: "greetings.py"
+
+  dependencies:
+    - dialog.qml
 
   #Where to register this action: in all folders
   register:
