save as template action and template action settings

--- a/template/file.yaml
+++ b/template/file.yaml
@@ -13,18 +13,18 @@ action:
   type: python
   enable: false
   author: Anchorpoint Software GmbH
-  description: Creates a new File from a set of templates with the correct naming convention
+  description: Creates a new file from a set of templates with the correct naming convention
   icon:
     path: :/icons/singleFile.svg
 
   inputs:
-    template_dir: file_templates
+    template_dir: templates/file
     file_mode: true
 
   script: templates.py
 
   dependencies:
-    - file_templates
+    - templates/file
 
   register:
     folder:
