limit supported platforms for drive action to windows

--- a/drives/drive_package.yaml
+++ b/drives/drive_package.yaml
@@ -17,6 +17,9 @@ action:
   icon:
     path: :/icons/hardDrive.svg
 
+  platforms:
+    - win
+
   actions:
     - ap::mapasdrive
     - ap::unmapdrive
