--- a/coding/open_terminal_here.yaml
+++ b/coding/open_terminal_here.yaml
@@ -9,7 +9,7 @@ action:
 
   version: 1
   id: ap::openterminal
-  category: code
+  category: utility/code
   enable: false
   type: python
   author: Anchorpoint Software GmbH
