--- a/template/save_as_template.yaml
+++ b/template/save_as_template.yaml
@@ -9,7 +9,7 @@ action:
 
   version: 1
   id: ap::template::save
-  category: template
+  category: automation/template
   type: python
   author: Anchorpoint Software GmbH
   description: Saves the current file / folder as a template
