--- a/examples/action input/run_command.yaml
+++ b/examples/action input/run_command.yaml
@@ -9,7 +9,7 @@ action:
 
   version: 1
   id: ap::examples::inputcommand
-  category: examples/input
+  category: utility/code/examples/input
   type: command
   enable: false
   author: Anchorpoint Software GmbH
