--- a/examples/ui/widgets/greetings.yaml
+++ b/examples/ui/widgets/greetings.yaml
@@ -12,7 +12,7 @@ action:
   #Optional Properties
   version: 1
   id: "ap::examples::widgets::greetings"
-  category: "examples/dialog"
+  category: "utility/code/examples/dialog"
   type: python
   enable: false
   author: "Anchorpoint Software GmbH"
