--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -13,9 +13,9 @@ action:
   type: package
   enable: false
   author: Anchorpoint Software GmbH
-  description: A useful collection of actions that showcase how to write your own actions
+  description: A useful collection of Action examples that showcase how to write your own Actions
   icon:
-    path: :/icons/action.svg
+    path: codingExamples.svg
 
   actions:
     - ap::examples::async
