--- a/drives/drive_package.yaml
+++ b/drives/drive_package.yaml
@@ -13,9 +13,9 @@ action:
   type: package
   enable: true
   author: Anchorpoint Software GmbH
-  description: Maps (mounts) and unmaps a folder to a drive
+  description: Maps (mounts) a folder as an internal drive
   icon:
-    path: :/icons/hardDrive.svg
+    path: "mapToDrive.svg"
 
   platforms:
     - win
