--- a/template/folder.yaml
+++ b/template/folder.yaml
@@ -5,7 +5,7 @@
 
 version: 1.0
 action:
-  name: New Folder from Template
+  name: Folder from Template
 
   version: 1
   id: ap::template::newfolder
@@ -13,7 +13,7 @@ action:
   type: python
   enable: false
   author: Anchorpoint Software GmbH
-  description: Creates a new folder from a set of templates with the correct naming convention
+  description: Creates a folder from a template with the correct naming convention
   icon:
     path: :/icons/folderGrey.svg
 
@@ -27,5 +27,5 @@ action:
     - templates/folder
 
   register:
-    folder:
+    new_folder:
       enable: true
