--- a/template/save_as_template.yaml
+++ b/template/save_as_template.yaml
@@ -12,7 +12,7 @@ action:
   category: automation/template
   type: python
   author: Anchorpoint Software GmbH
-  description: Saves the current file / folder as a template
+  description: Saves the selected file or folder as a template
   icon:
     path: :/icons/folderCloud.svg
 
