Adjusted Actions and templates

--- a/template/file.yaml
+++ b/template/file.yaml
@@ -13,7 +13,7 @@ action:
   type: python
   enable: false
   author: Anchorpoint Software GmbH
-  description: Creates a new file from a set of templates with the correct naming convention
+  description: Creates a new file from a template with the correct naming convention
   icon:
     path: :/icons/singleFile.svg
 
