fix dependencies of package

--- a/versioncontrol/actions/git_package.yaml
+++ b/versioncontrol/actions/git_package.yaml
@@ -21,7 +21,8 @@ action:
   icon:
     path: ":icons/version.svg"
 
-  dependencies: ../vc
+  dependencies: 
+    - ../vc
 
   actions:
     - git::clone
