--- a/examples/example_package.yaml
+++ b/examples/example_package.yaml
@@ -29,3 +29,6 @@ action:
     - ap::examples::widgets::greetings
     - ap::examples::settings
     - ap::examples::environment
+    - ap::examples::trigger::timer
+    - ap::examples::trigger::actionenabled
+    - ap::examples::trigger::attributeschanged
