--- a/versioncontrol/actions/create_git_repository.yaml
+++ b/versioncontrol/actions/create_git_repository.yaml
@@ -5,16 +5,16 @@
 
 version: 1.0
 action:
-  name: Create Git Repository
+  name: Git Repository
 
   version: 1
-  id: git::createrepo
+  id: git::newrepo
   category: git
   type: python
   author: Anchorpoint Software GmbH
   description: Creates a new Git Repository
   icon:
-    path: :/icons/version.svg
+    path: :/icons/versioncontrol.svg
 
   script: create_git_repository.py
 
